Fixed dictionary styling on smaller screen

--- a/src/webapp/static/styles/dictionary.css
+++ b/src/webapp/static/styles/dictionary.css
@@ -6,7 +6,7 @@ body {
     background-image: url("../img/background_classic.jpg");
     background-size: cover;
     font-family: Tahoma;
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     font-size: min(16px, calc(3px + 0.4vw));
     margin: 0;
     display: flex;
@@ -35,6 +35,7 @@ main {
     place-items: center;
     justify-content: center;
     height: 100%;
+    overflow-y: auto;
 }
 
 
@@ -139,7 +140,7 @@ h1 {
 .word-list {
     height: 250px;
     overflow-y: auto;
-    padding: 10px;
+    margin-top: 10px;
     width: 100%;
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
